force-app/main/default/objects/Lead/fields/Payment_Initiated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Initiated_Date_Time__c</fullName>
    <label>Payment Initiated Date Time</label>
    <type>DateTime</type>
</CustomField>