force-app/main/default/objects/Lead/fields/Project_Defined_Score__c.field-meta.xml
<CustomField>
    <fullName>Project_Defined_Score__c</fullName>
    <formula>IF(  Project_Defined__c = true,5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Defined Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>