force-app/main/default/objects/Lead/fields/Qualification_Score__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Score__c</fullName>
    <formula>If( Quantity__c == null ,0,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum score can be 5</inlineHelpText>
    <label>Qualification Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>