force-app/main/default/objects/Lead/fields/Relevant_Experience__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Experience__c</fullName>
    <label>Relevant Experience</label>
    <length>25</length>
    <type>Text</type>
</CustomField>