force-app/main/default/objects/Lead/fields/Schedule_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Demo_Date__c</fullName>
    <label>Schedule Demo Date</label>
    <type>Date</type>
</CustomField>