force-app/main/default/objects/Lead/fields/Sex_Male_Female__c.field-meta.xml
<CustomField>
    <fullName>Sex_Male_Female__c</fullName>
    <label>Sex (Male/Female)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>