force-app/main/default/objects/Lead/fields/sfleadcaphfprod__External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>sfleadcaphfprod__External_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Lead ID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>