force-app/main/default/objects/Lead/fields/Should_be_Converted__c.field-meta.xml
<CustomField>
    <fullName>Should_be_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should be Converted?</label>
    <type>Checkbox</type>
</CustomField>