force-app/main/default/objects/Lead/fields/Siblings_As_Canadian_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Siblings_As_Canadian_Citizen__c</fullName>
    <description>Do you have a sibling (Brother or Sister) who is a Canadian citizen or permanent resident, who is currently living in Canada and is 18 years of age or older?</description>
    <label>Siblings As Canadian Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>