force-app/main/default/objects/Lead/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>