force-app/main/default/objects/Lead/fields/Spouse_Canada_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Canada_Work_Experience__c</fullName>
    <description>How many years of Work experience has your Spouse obtained INSIDE CANADA within the last 10 years?</description>
    <label>Spouse Canada Work Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>6 years</fullName>
            </value>
            <value>
                <fullName>More than 6 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>