force-app/main/default/objects/Lead/fields/Spouse_English_Proficiency_Listening__c.field-meta.xml
<CustomField>
    <fullName>Spouse_English_Proficiency_Listening__c</fullName>
    <label>Spouse English Proficiency (Listening)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proficiency</valueSetName>
    </valueSet>
</CustomField>