force-app/main/default/objects/Lead/fields/Spouse_French_Proficiency_Writing__c.field-meta.xml
<CustomField>
    <fullName>Spouse_French_Proficiency_Writing__c</fullName>
    <label>Spouse French Proficiency (Writing)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proficiency</valueSetName>
    </valueSet>
</CustomField>