force-app/main/default/objects/Lead/fields/Temporary_Disconnected_Remark__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Disconnected_Remark__c</fullName>
    <label>Temporary Disconnected Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>