force-app/main/default/objects/Lead/fields/Tirunelveli_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Tirunelveli_Lead_Number__c</fullName>
    <label>Tirunelveli Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>