force-app/main/default/objects/Lead/fields/Tirunelveli_RRId__c.field-meta.xml
<CustomField>
    <fullName>Tirunelveli_RRId__c</fullName>
    <formula>MOD(Tirunelveli_Lead_Number__c,1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tirunelveli RRId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>