force-app/main/default/objects/Lead/fields/Title_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Title_Job_Title__c</fullName>
    <label>Title / Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>