force-app/main/default/objects/Lead/fields/Title_Job_Title_Score__c.field-meta.xml
<CustomField>
    <fullName>Title_Job_Title_Score__c</fullName>
    <formula>If(  Title_Job_Title__c == null ,0,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum score can be 5</inlineHelpText>
    <label>Title / Job Title Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>