force-app/main/default/objects/Lead/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>Decision_Maker_Score__c  +  Project_Defined_Score__c  + Budget_Score__c +   Decision_Timeframe_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>