force-app/main/default/objects/Lead/fields/Visa_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visa_Purpose__c</fullName>
    <label>Visa Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>