force-app/main/default/objects/Lead/fields/Why_This_Course__c.field-meta.xml
<CustomField>
    <fullName>Why_This_Course__c</fullName>
    <label>Why This Course</label>
    <length>80</length>
    <type>Text</type>
</CustomField>