force-app/main/default/objects/Lead/fields/Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Graduation__c</fullName>
    <label>Year of Graduation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>