force-app/main/default/objects/Lead/recordTypes/PR.recordType-meta.xml
<RecordType>
    <fullName>PR</fullName>
    <active>true</active>
    <businessProcess>PR</businessProcess>
    <label>PR</label>
</RecordType>