force-app/main/default/objects/Lead/recordTypes/PRV.recordType-meta.xml
<RecordType>
    <fullName>PRV</fullName>
    <active>true</active>
    <businessProcess>PR</businessProcess>
    <label>PRV</label>
</RecordType>