force-app/main/default/objects/Lead/recordTypes/Study.recordType-meta.xml
<RecordType>
    <fullName>Study</fullName>
    <active>true</active>
    <businessProcess>Study</businessProcess>
    <label>Study</label>
</RecordType>