force-app/main/default/objects/Lead/recordTypes/TRV.recordType-meta.xml
<RecordType>
    <fullName>TRV</fullName>
    <active>true</active>
    <businessProcess>TRV</businessProcess>
    <label>TRV</label>
</RecordType>