force-app/main/default/objects/Lead/validationRules/MaturityDateForTRV_AND_Study.validationRule-meta.xml
<ValidationRule>
    <fullName>MaturityDateForTRV_AND_Study</fullName>
    <active>false</active>
    <errorConditionFormula>AND( !ISNEW(),  ISNULL(Maturity_Date__c  ),or( ISPICKVAL(Visa_Type__c, &quot;TRV&quot;) , ISPICKVAL(Visa_Type__c, &quot;Study&quot;) ) )</errorConditionFormula>
    <errorDisplayField>Maturity_Date__c</errorDisplayField>
    <errorMessage>Please enter Maturity Date</errorMessage>
</ValidationRule>