force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Nearest_Branch__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Evaluation_Score_V1__c</columns>
    <columns>Ilets__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Visa_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>