force-app/main/default/objects/Lead/listViews/Follow_up_Leads_for_Today.listView-meta.xml
<ListView>
    <fullName>Follow_up_Leads_for_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Evaluation_Score_V1__c</columns>
    <columns>Ilets__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Visa_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Follow_Up_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Follow up Leads for Today</label>
</ListView>