force-app/main/default/objects/Lead/listViews/Org_Default_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Org_Default_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Org Default Queue</label>
    <queue>Org_Default_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>